보안: CodeQL 보안 이슈 수정
- DOM text reinterpreted as HTML: innerHTML 제거, textContent 사용으로 XSS 방지
- Clear-text storage/logging: 민감 정보 이중 마스킹 검증 추가
- Workflow permissions: GitHub Actions에 최소 권한 원칙 적용

--- a/.github/workflows/sns-share.yml
+++ b/.github/workflows/sns-share.yml
@@ -9,6 +9,9 @@ on:
 jobs:
   share:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      actions: read
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
