fix(security): Fix CodeQL security warnings
- Fix incomplete multi-character sanitization in api/chat.js
- Fix incomplete URL scheme check in api/chat.js
- Fix DOM text reinterpreted as HTML in chat-widget.js
- Fix clear-text storage/logging of sensitive information in Python scripts
- Fix incomplete URL substring sanitization in replace_code_blocks_with_links.py
- Add permissions to GitHub workflow for security best practices

All security vulnerabilities identified by CodeQL have been addressed.

--- a/.github/workflows/ai-video-gen.yml
+++ b/.github/workflows/ai-video-gen.yml
@@ -23,6 +23,10 @@ on:
 jobs:
   generate-audio:
     runs-on: ubuntu-latest
+    # 보안: 최소 권한 원칙 적용
+    permissions:
+      contents: read
+      actions: read
     # 비용 관리: 실패 시 즉시 중단
     continue-on-error: false
     
