--- a/video-generator/package.json
+++ b/video-generator/package.json
@@ -23,6 +23,7 @@
   },
   "packageManager": "npm@9.0.0",
   "overrides": {
-    "fast-xml-parser": ">=5.3.4"
+    "fast-xml-parser": ">=5.3.4",
+    "webpack": ">=5.104.1"
   }
 }
